Deleted unecessary images

--- a/landing2.html
+++ b/landing2.html
@@ -53,13 +53,22 @@
     <!-- HERO-->
     <section id="hero" class="hero slider">
       <ul class="slides">
+        <li><img src="img/mani.png" alt="Banner 1">
+          <div class="caption center-align"></div>
+        </li>
+        <li><img src="img/fashion.jpg" alt="Banner 1">
+          <div class="caption center-align"></div>
+        </li>
         <li><img src="img/color.jpg" alt="Banner 1">
           <div class="caption center-align"></div>
         </li>
-        <li><img src="img/retouch_banner.jpg" alt="Banner 1">
+        <li><img src="img/retouch_banner.jpeg" alt="Banner 1">
           <div class="caption center-align"></div>
         </li>
-        <li><img src="img/mani.png" alt="Banner 1">
+        <li><img src="img/color_2.png" alt="Banner 1">
+          <div class="caption center-align"></div>
+        </li>
+        <li><img src="img/bw_banner.jpg" alt="Banner 1">
           <div class="caption center-align"></div>
         </li>
       </ul>
